--- a/TestInjectionGenerator/TestInjectionGenerator.vcxproj.filters
+++ b/TestInjectionGenerator/TestInjectionGenerator.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Logger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LogEntry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="InputParser.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LoggerMultiton.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LogEntry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
