Rename project from 'TestInjectionGenerator' to 'AutoNSubstitute'

--- a/AutoNSubstitute/AutoNSubstitute.vcxproj.filters
+++ b/AutoNSubstitute/AutoNSubstitute.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TestInjectionGenerator.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="InputParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -43,6 +40,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LogEntry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AutoNSubstitute.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
