--- a/AutoNSubstitute/AutoNSubstitute.vcxproj
+++ b/AutoNSubstitute/AutoNSubstitute.vcxproj
@@ -21,8 +21,9 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E064E251-EEB2-4974-A052-7A9D021EF7BF}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>TestInjectionGenerator</RootNamespace>
+    <RootNamespace>AutoNSubstitute</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>AutoNSubstitute</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -152,7 +153,7 @@
     <ClCompile Include="LoggerMultiton.cpp" />
     <ClCompile Include="OutputParser.cpp" />
     <ClCompile Include="SourceFile.cpp" />
-    <ClCompile Include="TestInjectionGenerator.cpp" />
+    <ClCompile Include="AutoNSubstitute.cpp" />
     <ClCompile Include="Utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
